--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
 ### Maven template
+
 .idea
 pom.xml.tag
 pom.xml.releaseBackup
@@ -32,6 +33,9 @@ release.properties
 dependency-reduced-pom.xml
 buildNumber.properties
 .mvn/timing.properties
+
+### Java project files
+*.iml
 
 # Avoid ignoring Maven wrapper jar file (.jar files are usually ignored)
 !/.mvn/wrapper/maven-wrapper.jar
