--- a/pom.xml
+++ b/pom.xml
@@ -95,7 +95,20 @@
             <groupId>ru.yandex.qatools.allure</groupId>
             <version>${allure-maven-plugin.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>3.0.7</version>
+        </dependency>
+        <dependency>
+            <groupId>org.json</groupId>
+            <artifactId>json</artifactId>
+            <version>20160810</version>
+        </dependency>
+
     </dependencies>
+
 
     <reporting>
         <excludeDefaults>true</excludeDefaults>
