REST: added tests of checking work of search request Changed XML, added Allure to REST

--- a/pom.xml
+++ b/pom.xml
@@ -26,9 +26,8 @@
 
                     <configuration>
                         <suiteXmlFiles>
-                            <suiteXmlFile>src\test\resources\googleTest.xml</suiteXmlFile>
+                            <suiteXmlFile>src\test\resources\tests.xml</suiteXmlFile>
                         </suiteXmlFiles>
-
                         <argLine>
                             -javaagent:"${settings.localRepository}/org/aspectj/aspectjweaver/${aspectj.version}/aspectjweaver-${aspectj.version}.jar"
                         </argLine>
